# planning_control

./: .clang-format  .gitignore  README.md  license
planning/: .gitignore  CMakeLists.txt  README.md  package.xml
planning/config/: config.rviz
planning/doc/: planning.md
planning/include/: on_lane_planning.h  planning_base.h  planning_node.h
planning/include/common/: dependency_injector.h  discretized_trajectory.h  frame.h  indexed_list.h  local_view.h  obstacle.h  vehicle_param.h  vehicle_state.h
planning/include/config/: planning_config.h
planning/include/constraint_checker/: collision_checker.h
planning/include/lattice/: lattice_trajectory1d.h  trajectory1d_generator.h  trajectory1d_generetor.h
planning/include/math/: aabox2d.h  box2d.h  cartesian_frenet_conversion.h  line_segment2d.h  math_utils.h  polygon2d.h  pose.h  vec2d.h
planning/include/planner/: cartesian_planner.h  dp_plan.h  dp_planner.h  lattice_planner.h  planner.h
planning/include/planning/: cartesian_planner.h  data_struct.h  discretized_trajectory.h  dp_planner.h  frame.h  indexed_list.h  local_view.h  obstacle.h  planner.h  planning_config.h  reference_line.h  reference_line_provider.h  trajectory_nlp.h  trajectory_optimizer.h  vehicle_param.h
planning/include/reference_line/: reference_line.h  reference_line_provider.h
planning/include/trajectory_optimization/: trajectory_nlp_optimizer.h  trajectory_optimizer.h
planning/include/visualization/: color.h  plot.h
planning/launch/: planning.launch
planning/rviz/: config.rviz
planning/script/: pickle_publisher.py  reference.pickle  reference_publisher.py
planning/src/: on_lane_planning.cpp  on_lane_planning.h  planning_base.cpp  planning_base.h  planning_node.cpp  planning_node.h  test_planning_node.cpp
planning/src/common/: data_struct.h  discretized_trajectory.cpp  frame.cpp  obstacle.cpp  obstacle.h  planning_config.h  planning_gflags.cc  planning_gflags.h  st_boundary.cpp  st_boundary.h  st_point.cpp  st_point.h  vehicle_config_helper.h
planning/src/constraint_checker/: collision_checker.cpp
planning/src/lattice/: end_condition_sampler.cc  end_condition_sampler.h  lateral_osqp_optimizer.cc  lateral_osqp_optimizer.h  lateral_qp_optimizer.h  lattice_trajectory1d.cpp  lattice_trajectory1d.h  path_time_graph.cpp  path_time_graph.h  trajectory1d_generator.cpp  trajectory1d_generator.h  trajectory1d_generetor.cpp
planning/src/math/: aabox2d.cpp  aabox2d.h  box2d.cpp  box2d.h  cartesian_frenet_conversion.cpp  cartesian_frenet_conversion.h  line_segment2d.cpp  line_segment2d.h  linear_interpolation.cpp  linear_interpolation.h  math_utils.cpp  math_utils.h  path_matcher.cpp  path_matcher.h  polygon2d.cpp  polygon2d.h  polynomial_xd.cc  polynomial_xd.h  vec2d.cpp  vec2d.h
planning/src/planner/: cartesian_planner.cpp  cartesian_planner.h  dp_plan.cpp  dp_planner.cpp  dp_planner.h  em_planner.cc  em_planner.h  lattice_planner.cpp  lattice_planner.h  planner.h
planning/src/planning/: cartesian_planner.cpp  discretized_trajectory.cpp  discretized_trajectory.h  dp_planner.cpp  frame.cpp  frame.h  indexed_list.h  local_view.h  obstacle.cpp  obstacle.h  planning_config.cpp  planning_config.h  reference_line.cpp  reference_line_provider.cpp  trajectory_nlp.cpp  trajectory_nlp.h  trajectory_optimizer.cpp  trajectory_optimizer.h  vehicle_param.h
planning/src/reference_line/: reference_line.cpp  reference_line.h  reference_line_provider.cpp  reference_line_provider.h  reference_line_smoother.h
planning/src/task/: path_optimizer.cc  path_optimizer.h  task.cc  task.h
planning/src/trajectory_optimization/: trajectory_nlp_optimizer.cpp  trajectory_optimizer.cpp
planning/src/visualization/: color.cpp  plot.cpp  plot.h
planning/test/: test_planning_node.cpp
serial_demo/: CMakeLists.txt  package.xml
serial_demo/include/serial_demo/: wit_serial.h
serial_demo/launch/: serial.launch
serial_demo/src/: serial_demo.cpp  test_serial.cpp  wit_serial.cpp
test_common/: CMakeLists.txt  package.xml
test_common/include/test_common/: status.h  vehicle_state_provider.h
test_common/src/: status.cpp  vehicle_state_provider.cpp
test_control/: CMakeLists.txt  package.xml
test_control/config/: control_config.yaml  vehicle_param.yaml
test_control/include/math/: mpc_osqp.h
test_control/include/test_control/: ADCTrajectory.h  control_conf.h  controller.h  mpc_controller.h  trajectory_analyzer.h  vehicle_state_provider.h
test_control/launch/: test_control.launch
test_control/msg/: chassis_cmd.msg  chassis_data.msg  simple_mpc_debug.msg
test_control/src/: ADCTrajectory.cpp  mpc_controller.cpp  test_control_node.cpp  test_pub_node.cpp  trajectory_analyzer.cpp  vehicle_state_provider.cpp
test_control/src/math/: mpc_osqp.cpp
test_planning/: CMakeLists.txt  package.xml
test_planning/config/: rviz_config.rviz
test_planning/include/common/: data_struct.h  discretized_trajectory.h  frame.h  obstacle.h  planning_dependency_injector.h  vehicle_state.h  vehicle_state2.h
test_planning/include/config/: planning_flags.h
test_planning/include/data_struct/: data_struct.h  reference_path.h  reference_path_impl.h
test_planning/include/math/: math_util.h
test_planning/include/path_optimizer/: path_optimizer.h  qp_path_optimizer.h
test_planning/include/path_smoother/: path_smoother.h  reference_path_smoother.h  tension_smoother.h
test_planning/include/planner/: dp_rough_planner.h
test_planning/include/reference_line/: qp_spline_reference_smoother.h  reference_line.h  reference_line_smoother.h  reference_point.h
test_planning/include/solver/: base_solver.h
test_planning/include/test_planning/: dependency_injector.h  lattice_planner.h  planner.h  planning_config.h  reference_line_info.h
test_planning/launch/: planning.launch  test_path_optimizer.launch
test_planning/log/: test_path_optimizer.INFO  test_path_optimizer.mujianhua.mujianhua.log.INFO.20220717-210147.19334
test_planning/src/: lattice_planner.cpp  reference_line_info.cpp  test_planning_node.cpp
test_planning/test/: cartesian_frenet_conversion_test.cpp
(+91 files in other folders)
