<?xml version="1.0"?>
<package format="2">
  <name>planning</name>
  <version>0.0.1</version>
  <description>The planning package</description>
  <maintainer email="mujianhua654@gmail.com">Jianhua Mu</maintainer>
  <license>GPL</license>
  <author email="mujianhua654@gmail.com">Jianhua Mu</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
