<?xml version="1.0"?>
<package format="2">
  <name>test_planning</name>
  <version>0.0.0</version>
  <description>The test_planning package</description>

  <maintainer email="jianhua_mu@163.com">mujianhua</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>test_common</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>test_common</exec_depend>

  <export>

  </export>
</package>
